<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/kenburnsBackground"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/flMovie"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/overlay_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/black_gradient" />

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="@dimen/huge"
                    android:layout_height="@dimen/huge"
                    android:layout_margin="8dp"
                    android:background="@drawable/rounded_textview"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/extraLarge"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpUsage" />


                <TextView
                    android:id="@+id/tvReleaseDate"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/tvTitle"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/tvGenre"
                    app:layout_constraintEnd_toStartOf="@id/tvRating"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvGenre"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvRating"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flMovie" />

        <me.ibrahimsn.lib.CirclesLoadingView
            android:id="@+id/progressBar_details"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_margin="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            app:circleRadius="8dp"
            app:circleMargin="8dp"
            app:animDistance="10dp"
            app:animDuration="500"
            app:animDelay="150"
            app:animInterpolator="accelerateDecelerate"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>