<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/movieFragment"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/title_movies" />

    <item
        android:id="@id/tvShowsFragment"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/title_tvshows" />



</menu>